--- a/boards/shields/charybdis/split_input_common.dtsi
+++ b/boards/shields/charybdis/split_input_common.dtsi
@@ -25,7 +25,7 @@
     device = <&trackball_split>;
 
     snipe {
-      layers = <NUM>;
+      layers = <MOUSEm>;
       input-processors = <&zip_xy_scaler 1 3>;
     };
 
