--- a/boards/shields/charybdis/split_input_common.dtsi
+++ b/boards/shields/charybdis/split_input_common.dtsi
@@ -38,7 +38,7 @@
     move {
       //layers = <DEF MOUSE>;
       layers = <MOUSE>;
-      input-processors = <&auto_mouse_layer MOUSE 600>;
+      input-processors = <&auto_mouse_layer MOUSE 600>,<&zip_xy_scaler 1 2>;
     };
   };
 
