--- a/boards/shields/charybdis/split_input_common.dtsi
+++ b/boards/shields/charybdis/split_input_common.dtsi
@@ -32,13 +32,13 @@
     scroll {
       layers = <FN>;
       //input-processors = <&zip_xy_transform (INPUT_TRANSFORM_Y_INVERT)>, <&zip_xy_scaler 1 3>, <&zip_xy_to_scroll_mapper>;
-      input-processors = <&zip_xy_scaler 3 4>, <&zip_xy_to_scroll_mapper>;
+      input-processors = <&zip_xy_scaler 1 2>, <&zip_xy_to_scroll_mapper>, <&zip_y_scaler 1 2>;
     };
 
     move {
       //layers = <DEF MOUSE>;
       layers = <DEF MOUSE>;
-      input-processors = <&auto_mouse_layer MOUSE 500>, <&zip_xy_scaler 1 3>;      
+      input-processors = <&auto_mouse_layer MOUSE 700>, <&zip_xy_scaler 1 3>;      
     };
   };
 
