--- a/boards/shields/charybdis/split_input_common.dtsi
+++ b/boards/shields/charybdis/split_input_common.dtsi
@@ -39,7 +39,7 @@
       //layers = <DEF MOUSE>;
       layers = <DEF MOUSE>;
       //input-processors = <&auto_mouse_layer MOUSE 700>, <&zip_xy_scaler 1 3>; 
-      input-processors = <&zip_temp_layer MOUSE 700>, <&zip_xy_scaler 1 3>;
+      input-processors = <&zip_temp_layer 1 700>, <&zip_xy_scaler 1 3>;
     };
   };
 
