--- a/boards/shields/charybdis/split_input_common.dtsi
+++ b/boards/shields/charybdis/split_input_common.dtsi
@@ -31,14 +31,14 @@
 
     scroll {
       layers = <FN>;
-      input-processors = <&zip_xy_transform (INPUT_TRANSFORM_Y_INVERT)>, <&zip_xy_scaler 1 3>, <&zip_xy_to_scroll_mapper>;
+      //input-processors = <&zip_xy_transform (INPUT_TRANSFORM_Y_INVERT)>, <&zip_xy_scaler 1 3>, <&zip_xy_to_scroll_mapper>;
+      input-processors = <&zip_y_scaler 1 2>, <&zip_xy_to_scroll_mapper>, <&zip_y_scaler 1 3>;
     };
 
     move {
       //layers = <DEF MOUSE>;
-      layers = <DEF MOUSE>;
-      //input-processors = <&auto_mouse_layer MOUSE 700>, <&zip_xy_scaler 1 3>; 
-      input-processors = <&zip_temp_layer 1 700>, <&zip_xy_scaler 1 3>;
+      layers = <MOUSE>;
+      //input-processors = <&auto_mouse_layer MOUSE 700>, <&zip_xy_scaler 1 3>;
     };
   };
 
