--- a/boards/shields/charybdis/split_input_common.dtsi
+++ b/boards/shields/charybdis/split_input_common.dtsi
@@ -32,7 +32,7 @@
     scroll {
       layers = <FN>;
       //input-processors = <&zip_xy_transform (INPUT_TRANSFORM_Y_INVERT)>, <&zip_xy_scaler 1 3>, <&zip_xy_to_scroll_mapper>;
-      input-processors = <&zip_y_scaler 1 2>, <&zip_xy_to_scroll_mapper>, <&zip_x_scaler 1 3>;
+      input-processors = <&zip_y_scaler 1 2>, <&zip_xy_to_scroll_mapper>, <&zip_x_scaler 1 3>, <&zip_xy_transform (INPUT_TRANSFORM_X_INVERT);
     };
 
     move {
